# painel-administrativo-api

./: .env  README.md  app.py  config.py  database.py  dependencies.py  pyproject.toml  router.py
